# jamcraft

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml
scripts/: spotify_auth.rs  spotify_check.rs
src/: main.rs  resolve.rs  slack.rs  spotify.rs  types.rs
