[package]
name = "jamcraft"
version = "0.1.0"
edition = "2021"
default-run = "jamcraft"

[[bin]]
name = "jamcraft"
path = "src/main.rs"

[[bin]]
name = "spotify_auth"
path = "scripts/spotify_auth.rs"

[[bin]]
name = "spotify_check"
path = "scripts/spotify_check.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dashmap = "5.5"
regex = "1.10"
time = { version = "0.3", features = ["macros", "formatting"] }
tower-http = { version = "0.5", features = ["trace"] }
urlencoding = "2.1"
base64 = "0.21"
